# darqube-moderator

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
etc/: bad_words.txt  filter_config.json
src/: moderator.cpp  moderator.h  moderator_types.h
src/filter/: bad_words_parser.cpp  bad_words_parser.h  filter.cpp  filter.h  filter_config.cpp  filter_config.h
src/json/: document_parser.cpp  document_parser.h  document_writer.cpp  document_writer.h  serializable.h
src/user/: penalty_calculator.cpp  penalty_calculator.h  serializable_map.h  user_cache.cpp  user_cache.h  user_wrapper.cpp  user_wrapper.h
tests/: CMakeLists.txt  filter_test.cpp  json_test.cpp  moderator_test.cpp  user_test.cpp
